# visionhub

./: README.md  __init__.py  config.yaml  pyproject.toml  run_pipeline.py  setup.py
configs/quick_start/: ResNet18.yaml
configs/shitu/: rec_faiss_augment.yaml  rec_faiss_demo.yaml
deploy/: batch_inference.py  http_server.py  onnx_predictor.py  tensorrt_predictor.py
docs/: DEPLOYMENT_GUIDE.md  PRIORITY1_GUIDE.md  README.md  USER_GUIDE.md  YOLO+向量检索.md
label_gallery/: gallery.txt
label_gallery/index/: id_map.pkl  metadata.pkl  vector.index
ptcls/: __init__.py
ptcls/arch/: __init__.py
ptcls/arch/backbone/: __init__.py  foundation_adaface.py  mobilenetv4_uniformer_levit.py  mobilevit_svtr_darknet.py  registry.py  resnet.py
ptcls/arch/distill/: afd_attention.py
ptcls/arch/gears/: __init__.py  adamargin.py  arcmargin.py  bnneck.py  circlemargin.py  cosmargin.py  fc.py  metabnneck.py  ml_decoder.py  vehicle_neck.py
ptcls/arch/head/: __init__.py  embedding_head.py
ptcls/arch/slim/: __init__.py  prune.py  quant.py
ptcls/data/: __init__.py
ptcls/det/: __init__.py  yolo_predictor.py
ptcls/distill/: losses.py
ptcls/engine/: engine.py
ptcls/face/: __init__.py
ptcls/index/: __init__.py  faiss_index.py  gallery.py
ptcls/loss/: __init__.py  arcface.py  celoss.py  circle_loss.py  distance_loss.py
ptcls/metric/: contrastive.py  metrics.py  retrieval_eval.py  triplet.py
ptcls/optimizer/: __init__.py  builder.py  learning_rate.py  optimizer.py
ptcls/rec/: __init__.py  predictor.py
ptcls/tools/: analyze_topk.py  build_gallery.py  cleanup_outputs.py  debug_rec_feature.py  eval_classification.py  eval_retrieval.py  export_model.py  face_recognition_inference.py  predict_system.py  quantize_model.py  shitu_kd_reindex_eval.py  shitu_train_and_reindex.py  train.py  train_classification.py  train_face_recognition.py  train_rec_embedding.py  train_rec_kd.py  yolo_classification.py  yolo_det_classification.py
ptcls/utils/: config.py  ema.py  io.py  logger.py  save_load.py  save_result.py  visualize.py  yolo_data.py
(+131 files in other folders)
